--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Coming Soonish
+<head>
+<title>nuxops</title>
+</head>
+<html style="height: 100%;">
+<body style="height: 100%; display: flex; flex-direction: column; background-color: #222222; color: #ecf0f1;">
+<div style="width: 200px; height: 250px; text-align: center; margin: auto;">
+<img src="img/logo.png" />
+<div style="margin-top: 2em;">hello@nuxops.co.uk</div>
+</div>
+</body>
+</html>
